finished all verification and included final smart contract

--- a/db2/history
+++ b/db2/history
@@ -124,3 +124,101 @@ web3.utils.toChecksumAddress("0x123f681646d4a755815f9cb19e1acc8565a0c2ac")
 eth.blockNumber
 miner.start()
 miner.stop()
+web3.eth.accounts[0]
+web3.eth.accounts[1]
+eth.accounts[0[
+web3.eth.accounts[0]
+miner.start(
+)
+miner.stop()
+miner.start()
+miner.stop()
+eth.accounts[0]
+web3.eth.getBalance(eth.accounts[0])
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+web3.eth.getBalance(eth.accounts[0])
+miner.stop()
+miner.start()
+miner.stop
+miner.stop()
+web3.eth.getBalance(eth.accounts[0])
+miner.start9)
+miner.start()
+miner.stop()
+eth.getBlock("latest").gasLimit
+miner.start()
+miner.stop()
+eth.accounts[0]
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miners.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+eth.getBlock("latest").gasLimit
+miner.start()
+miner.stop()
+web3.eth.gasPrice
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+miner.start(0
+)
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
+eth.accounts[0]
+eth.accounts
+web3.getBalance
+web3.eth.getBalance(eth.accounts[1])
+web3.eth.getBalance(eth.accounts[0])
+miner.start()
+miner.stop()
+web3.eth.getBalance(eth.accounts[1])
+miner.start()
+miner.stop()
+personal0x70455025fe4fd09480bd4b206870d97b22adca6
+miner.start()
+miner.stop()
